[package]
name = "chatroom"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-channel = "0.3"
futures-util = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
url = "2.5"
env_logger = "0.10"
native-tls = "0.2"
rcgen = "0.11"
tokio-native-tls = "0.3"
